--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-typescript": "^7.12.16",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^6.1.0",
     "@tsconfig/svelte": "^1.0.0",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "rollup": "^2.3.4",
